name:               argonaut
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (c) 2016, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           JSON parser.
category:           Data, Text, JSON
description:        JSON parser with an emphasis on composition, useful error-reporting and type-safety.
homepage:           https://github.com/data61/argonaut
bug-reports:        https://github.com/data61/argonaut/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog, todo.md

source-repository   head
  type:             git
  location:         git@github.com:data61/argonaut.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 4.8
                    , semigroups >= 0.8 && < 1.0
                    , semigroupoids >= 4.2 && < 6
                    , lens >= 4.3.3 && < 5
                    , text          
                    , text1
                    , parsers      
                    , papa

                    , parsec
                    , QuickCheck
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Json.Argonaut

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8
                    , parsec >= 3.1

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
